# apertium-regtest

./: .editorconfig  .gitignore  AUTHORS  Makefile.am  README  apertium-regtest.pc.in  apertium-regtest.py  apertium-regtest.sh  configure.ac  regtest.py
static/: README.md  index.html  regtest.css  regtest.js
tools/: flat2nest.py  from-morph-test.py  import_corpus.py
